<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference
         android:key="username"
         android:title="@string/prefs_username_title"
         android:summary="@string/prefs_username_summary"/>
    <EditTextPreference
         android:key="password" 
         android:title="@string/prefs_password_title"
         android:summary="@string/prefs_password_summary"
         android:password="true" />
    <EditTextPreference
         android:key="site_url" 
         android:title="@string/prefs_site_url_title"
         android:summary="@string/prefs_site_url_summary" />
    <CheckBoxPreference
    	android:key="timeline_service_up"
    	android:title="@string/prefs_timeline_service_up_title"
    	android:summary="@string/prefs_timeline_service_up_summary" android:defaultValue="false"/>

</PreferenceScreen>